--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
                 <div class="div3"></div>
                 <img src="./images/gender indicator use.png" id="bmiArrow" alt="">
             </div>
+            <div class="resultDisplay" id="resultDisplay">
+                <h2 class="dis1" id="dis1"></h2>
+                <h2 class="dis2" id="dis2"></h2>
+                <h2 class="dis3" id="dis3"></h2>
+                <h3 class="text-center dis4" id="dis4"></h3>
+            </div>
         </div>
     </div>
     
